sudeti filtrai URL, CLIENT ir UID kintamiesiems

--- a/config.cfg
+++ b/config.cfg
@@ -1,8 +1,12 @@
 [export]
 toexcel = 0
+excelname = bbstats.xlsx
 tocvs = 0
 
 [filters]
-url = ^/it-ziniu-centras.*?/$
-company = Keliu direkcija
-uid = 123123213213SDFKJSDH09328403928KSJDL
+#url = ^/it-ziniu-centras.*?/$
+#url = /$
+url =
+
+client =
+uid = B85287C20E60D2574A73FAA102272503
