Perskaito MS Excel failo pavadinima export'ui is cfg failo

--- a/config.cfg
+++ b/config.cfg
@@ -1,12 +1,12 @@
 [export]
 toexcel = 0
-excelname = bbstats.xlsx
+excelname = BBreport.xlsx
 tocvs = 0
 
 [filters]
 #url = ^/it-ziniu-centras.*?/$
-#url = /$
-url =
+url = /$
+#url =
 
 client =
-uid = B85287C20E60D2574A73FAA102272503
+uid =
