panaikina is URL'u modifikatorius, kurie pridedami google search'o

--- a/config.cfg
+++ b/config.cfg
@@ -1,11 +1,11 @@
 [export]
-toexcel = 0
+toexcel = 1
 excelname = BBreport.xlsx
 tocvs = 0
 
 [filters]
 #url = ^/it-ziniu-centras.*?/$
-url = /$
+url = /$|/?gclid=
 #url =
 
 client =
