--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,20 @@ drop.txt
 ipranges.txt
 pandaplay_csv0.1.py
 test.py
+/getstats.py
+
+style.css
+
+client_url.html
+
+style.css
+
+BBreport.xlsx
+
+config.cfg
+
+style.css
+
+config.cfg
+
+style.css
