prideda pradzios ir pabaigos data i failo pavadinima + iraso headeryje

--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,8 @@
 [export]
-toexcel = 1
+toexcel = 0
 excelname = BBreport.xlsx
-tocvs = 0
+tohtml = 1
+htmlname = report.html
 
 [filters]
 #url = ^/it-ziniu-centras.*?/$
