--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@ style.css
 config.cfg
 
 style.css
+/pandastest.py
+pandastest.py
+report_2016-10-02 2016-10-02.html
+report_2016-10-03 2016-10-03.html
+report_2016-10-04 2016-10-04.html
